<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrnd">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_volume"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:layout_margin="@dimen/layout"/>

    <Spinner
        android:id="@+id/sp_option"
        android:layout_width="@dimen/edit_width"
        android:layout_height="@dimen/edit_height"
        android:contentDescription="@string/kubus"
        style="@style/edittext" />

    <EditText
        android:id="@+id/et_input1"
        android:layout_width="@dimen/edit_width"
        android:layout_height="@dimen/edit_height"
        android:hint="@string/masukan_sisi_kubus"
        android:layout_weight="1"
        android:inputType="number"
        android:autofillHints=""
        style="@style/edittext"/>

    <EditText
        android:id="@+id/et_input2"
        android:layout_width="@dimen/edit_width"
        android:layout_height="@dimen/edit_height"
        android:hint="@string/masukan_sisi_kubus"
        android:layout_weight="1"
        android:inputType="number"
        android:autofillHints=""
        style="@style/edittext"/>

    <EditText
        android:id="@+id/et_input3"
        android:layout_width="@dimen/edit_width"
        android:layout_height="@dimen/edit_height"
        android:hint="@string/masukan_sisi_kubus"
        android:layout_weight="1"
        android:inputType="number"
        style="@style/edittext"
        android:autofillHints=""/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_hitung"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/hitung"
        android:layout_margin="@dimen/layout"
        android:background="@drawable/et_design"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_margin="@dimen/layout"/>

</LinearLayout>
</ScrollView>